# fullstack-webapp-template

./: .gitignore  README.md
backend/: pyproject.toml  scripts.py
frontend/: package-lock.json  package.json
infrastructure/: Makefile
